@@ -1,12 +1,9 @@
 package com.java_template.common.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.MissingNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.google.common.collect.Streams;
 import com.java_template.common.repository.CrudRepository;
 import jakarta.annotation.Nullable;
 import jakarta.validation.constraints.NotNull;
@@ -14,7 +11,9 @@ import java.util.Collection;
 import java.util.Date;
 
 import java.util.Objects;
+import org.cyoda.cloud.api.event.common.DataPayload;
 import org.cyoda.cloud.api.event.common.condition.GroupCondition;
+import org.cyoda.cloud.api.event.entity.EntityDeleteAllResponse;
 import org.cyoda.cloud.api.event.entity.EntityDeleteResponse;
 import org.cyoda.cloud.api.event.entity.EntityTransactionInfo;
 import org.cyoda.cloud.api.event.entity.EntityTransactionResponse;
@@ -45,34 +44,8 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<ObjectNode> getItem(@NotNull final UUID technicalId) {
-        return repository.findById(technicalId).thenApply(resultNode -> {
-            final ObjectNode dataNode = resultNode.path("data").deepCopy();
-            final var idNode = resultNode.at("/meta/id");
-            if (!idNode.isMissingNode()) {
-                dataNode.put("technicalId", idNode.asText());
-            }
-            return dataNode;
-        });
-    }
-
-    private ArrayNode enhanceWithTechId(@NotNull final ArrayNode arrayNode) {
-        return Streams.stream(arrayNode)
-                .filter(Objects::nonNull)
-                .map(this::enhanceWithTechId)
-                .collect(objectMapper::createArrayNode, ArrayNode::add, ArrayNode::addAll);
-    }
-
-    private ObjectNode enhanceWithTechId(@NotNull final JsonNode originalNode) {
-        final var copyNode = originalNode.path("data").deepCopy();
-        if (copyNode instanceof MissingNode) {
-            return (ObjectNode) originalNode;
-        }
-        final var idNode = originalNode.at("/meta/id");
-        if (!idNode.isMissingNode()) {
-            ((ObjectNode) copyNode).put("technicalId", idNode.asText());
-        }
-        return (ObjectNode) copyNode;
+    public CompletableFuture<DataPayload> getItem(@NotNull final UUID entityId) {
+        return repository.findById(entityId);
     }
 
     @Override
@@ -89,7 +62,7 @@ public class EntityServiceImpl implements EntityService {
                 pageSize != null ? pageSize : DEFAULT_PAGE_SIZE,
                 pageNumber != null ? pageNumber : FIRST_PAGE,
                 pointTime
-        ).thenApply(this::enhanceWithTechId);
+        ).thenApply(objectMapper::valueToTree);
     }
 
     @Override
@@ -109,16 +82,7 @@ public class EntityServiceImpl implements EntityService {
             if (items == null || items.isEmpty()) {
                 return Optional.empty();
             }
-
-            final var firstItem = items.get(0);
-            final var dataNode = firstItem.path("data");
-
-            if (!dataNode.isObject()) {
-                return Optional.empty();
-            }
-
-            final ObjectNode data = enhanceWithTechId(dataNode);
-            return Optional.of(data);
+            return Optional.of(objectMapper.valueToTree(items.getFirst()));
         });
     }
 
@@ -136,18 +100,18 @@ public class EntityServiceImpl implements EntityService {
                 DEFAULT_PAGE_SIZE,
                 FIRST_PAGE,
                 inMemory
-        ).thenApply(items -> Streams.stream(items)
+        ).thenApply(items -> items.stream()
                 .filter(Objects::nonNull)
-                .map(item -> inMemory ? item.deepCopy() : enhanceWithTechId(item))
-                .collect(objectMapper::createArrayNode, ArrayNode::add, ArrayNode::addAll)
-        );
+                .map(DataPayload::getData)
+                .toList()
+        ).thenApply(objectMapper::valueToTree);
     }
 
     @Override
-    public CompletableFuture<UUID> addItem(
+    public <ENTITY_TYPE> CompletableFuture<UUID> addItem(
             @NotNull final String modelName,
             @NotNull final Integer modelVersion,
-            @NotNull final Object entity
+            @NotNull final ENTITY_TYPE entity
     ) {
         return repository.save(modelName, modelVersion, objectMapper.valueToTree(entity))
                 .thenApply(EntityTransactionResponse::getTransactionInfo)
@@ -156,10 +120,10 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<ObjectNode> addItemAndReturnTransactionInfo(
+    public <ENTITY_TYPE> CompletableFuture<ObjectNode> addItemAndReturnTransactionInfo(
             @NotNull final String modelName,
             @NotNull final Integer modelVersion,
-            @NotNull final Object entity
+            @NotNull final ENTITY_TYPE entity
     ) {
         return repository.save(modelName, modelVersion, objectMapper.valueToTree(entity))
                 .thenApply(EntityTransactionResponse::getTransactionInfo)
@@ -168,10 +132,10 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<List<UUID>> addItems(
+    public <ENTITY_TYPE> CompletableFuture<List<UUID>> addItems(
             @NotNull final String modelName,
             @NotNull final Integer modelVersion,
-            @NotNull final Object entities
+            @NotNull final Collection<ENTITY_TYPE> entities
     ) {
         return repository.saveAll(modelName, modelVersion, objectMapper.valueToTree(entities))
                 .thenApply(EntityTransactionResponse::getTransactionInfo)
@@ -179,10 +143,10 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<ObjectNode> addItemsAndReturnTransactionInfo(
+    public <ENTITY_TYPE> CompletableFuture<ObjectNode> addItemsAndReturnTransactionInfo(
             @NotNull final String modelName,
             @NotNull final Integer modelVersion,
-            @NotNull final Object entities
+            @NotNull final Collection<ENTITY_TYPE> entities
     ) {
         return repository.saveAll(
                         modelName,
@@ -193,7 +157,7 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<UUID> updateItem(@NotNull final UUID entityId, @NotNull final Object entity) {
+    public <ENTITY_TYPE> CompletableFuture<UUID> updateItem(@NotNull final UUID entityId, @NotNull final ENTITY_TYPE entity) {
         return repository.update(entityId, objectMapper.valueToTree(entity), UPDATE_TRANSITION)
                 .thenApply(EntityTransactionResponse::getTransactionInfo)
                 .thenApply(EntityTransactionInfo::getEntityIds)
@@ -201,7 +165,7 @@ public class EntityServiceImpl implements EntityService {
     }
 
     @Override
-    public CompletableFuture<List<UUID>> updateItems(@NotNull final Object entities) {
+    public <ENTITY_TYPE> CompletableFuture<List<UUID>> updateItems(@NotNull final Collection<ENTITY_TYPE> entities) {
         return repository.updateAll(objectMapper.convertValue(entities, new TypeReference<>() {}), UPDATE_TRANSITION)
                 .thenApply(transactionResponses -> transactionResponses.stream()
                         .map(EntityTransactionResponse::getTransactionInfo)
@@ -230,6 +194,9 @@ public class EntityServiceImpl implements EntityService {
             @NotNull final String modelName,
             @NotNull final Integer modelVersion
     ) {
-        return repository.deleteAll(modelName, modelVersion);
+        return repository.deleteAll(modelName, modelVersion).thenApply(results -> results.stream()
+                .map(EntityDeleteAllResponse::getNumDeleted)
+                .reduce(0, Integer::sum)
+        );
     }
 }
